--- a/.prettierrc
+++ b/.prettierrc
@@ -3,5 +3,7 @@
   "useTabs": false,
   "semi": true,
   "singleQuote": true,
-  "jsxSingleQuote": true
+  "jsxSingleQuote": false,
+  "bracketSpacing": true,
+  "trailingComma": "all"
 }
