Portal  컴포넌트 분할, useRef로 DOM 조작하기

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -10,10 +10,14 @@
     ],
     "parserOptions": {
         "ecmaVersion": "latest",
-        "sourceType": "module"
+        "sourceType": "module",
+        "ecmaFeatures": {
+            "jsx": true
+        }
     },
     "plugins": [
-        "react"
+        "react",
+        "prettier"
     ],
     "rules": {
         "prettier/prettier": ["error", { "singleQuote": true, "semi": true, "endOfLine": "auto" }],
